# git-remote-pqcrypt

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  main.rs  url.rs
src/storage/: dispatch.rs  git_ssh.rs  local.rs  mod.rs  sftp.rs
src/types/: githash.rs  gitref.rs  manifest.rs  mod.rs  packfilerecord.rs
src/workers/: cryptworker.rs  gitworker.rs  keyworker.rs  mod.rs
