[package]
name = "git-remote-pqcrypt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "git-remote-pqcrypt"
path = "src/main.rs"

[dependencies]

base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["stream", "heapless"] }
chacha20 = { version = "0.10", features = ["zeroize"] }
poly1305 = { version = "0.8", features = ["zeroize"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
x-wing = { version = "0.1.0-rc.0", features = ["getrandom", "zeroize"] }
uuid = { version = "1.23.1", features = ["v4"] }
tokio = { version = "1.52.3", features = ["full"] }
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
async-trait = "0.1.89"
kem = "0.3.0"
zeroize = "1.8.2"
hpke = "0.13.0"
