[package]
name = "git-remote-pqcrypt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "git-remote-pqcrypt"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["stream"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.23.1", features = ["v4"] }
tokio = { version = "1.52.3", features = ["full"] }
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
async-trait = "0.1.89"
zeroize = "1.8.2"
# Keep the git-release, because it's the only one with X-Wing
hpke = { git = "https://github.com/rozbb/rust-hpke", features = ["xwing"] }
