[package]
name = "git-remote-pqcrypt"
version = "0.1.0"
edition = "2024"
description = "Git remote helper to manage postquantum encrypted repositories"
authors = ["Tormor <170923794+Torm0r@users.noreply.github.com>"]
license = "GPL-3.0"
repository = "https://github.com/Torm0r/pqcrypt"
publish = false
readme = "README.md"
exclude = [
    ".github/*",
    "tests/*",
    "benches/*"
]

[[bin]]
name = "git-remote-pqcrypt"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["stream"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.23.1", features = ["v4"] }
tokio = { version = "1.52.3", features = ["full"] }
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
zeroize = "1.8.2"
# Keep the git-release, because it's the only one with X-Wing
hpke = { git = "https://github.com/rozbb/rust-hpke", features = ["xwing"] }
thiserror = "2.0.18"
openssh = { version = "0.11", features = ["native-mux"] }
openssh-sftp-client = { version = "0.15.7", features = ["openssh"] }
futures = "0.3"
dirs = "6.0.0"
